[project]
name = "ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geoalchemy2>=0.18.0",
    "psycopg2-binary>=2.9.10",
    "shapely>=2.1.1",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "streamlit>=1.47.1",
    "streamlit-ace>=0.1.1",
    "streamlit-folium>=0.25.0",
]
